# IoTSec

./: .gitignore  AGENTS.md
.agents/skills/hw-qa/: SKILL.md
.agents/skills/ppt2note/: SKILL.md
.claude/skills/: README.md
.claude/skills/docx/: pyproject.toml
.claude/skills/pdf/: pyproject.toml
.claude/skills/pdf/scripts/: extract_ch9_images.py  extract_ch9_text.py
.claude/skills/ppt2note/: SKILL.md
.claude/skills/pptx/: pyproject.toml
note/: note01-intro.md  note02-wireless.md  note03-iot.md  note04-wireless-basics.md  note05-lte.md  note05-mac.md  note06-wep.md  note07-wpa.md  note08-wpa2.md  note09-rfid.md  note10-nfc.md  note11-bluetooth.md  note12-iot-security.md  readme.md
slides/: Week4-part1.pptx  Week4-part2.pptx  第三周-part1-无线通信MAC层.pptx  第四周Protected Access 2 (WPA2).pptx
