[project]
name = "docx-skill"
version = "0.1.0"
description = "DOCX processing skill for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "defusedxml>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
