[project]
name = "pdf-skill"
version = "0.1.0"
description = "PDF processing skill for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "pypdf>=4.0.0",
    "pdfplumber>=0.11.0",
    "reportlab>=4.0.0",
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
