[project]
name = "pptx-skill"
version = "0.1.0"
description = "PPTX processing skill for Claude Code"
requires-python = ">=3.10"
dependencies = [
    "defusedxml>=0.7.0",
    "pillow>=10.0.0",
    "markitdown>=0.0.1a2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
